<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Setting">Settings</string>
    <string name="SettingActivityTitle">Filters</string>
    <string name="size">SIZE</string>
    <string name="type">TYPE</string>
    <string name="color">COLOR</string>
    <string name="Done">Done</string>
    <string name="resetAll">Reset All Filters</string>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="site">SITE</string>
    <string name="site_hint">Enter Site..</string>
    <string name="back">Back</string>
    <string name="displayImage">IMAGE DISPLAY</string>

</resources>
