<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="2dp"
        android:scrollbars="vertical"
        tools:context=".SettingsActivity" >

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:text="@string/size" />

        <ListView
            android:id="@+id/lv_size"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_size" >
        </ListView>

        <TextView
            android:id="@+id/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lv_size"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/color" />

        <ListView
            android:id="@+id/lv_color"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_color" >
        </ListView>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lv_color"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/type" />

        <ListView
            android:id="@+id/lv_type"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_type" >
        </ListView>

        <TextView
            android:id="@+id/tv_resetAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_site"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:onClick="setupResetListener"
            android:text="@string/resetAll"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lv_type"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/site" />

        <EditText
            android:id="@+id/et_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_site"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tv_site"
            android:hint="@string/site_hint"
            android:textSize="15sp"
            android:imeOptions="actionNext"/>
    </RelativeLayout>
</ScrollView>